src/objects/ExactTarget_MIMO__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ExactTarget_Contact</relationshipLabel>
        <relationshipName>ExactTarget_MIMO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ET_CommunityEmail__c</fullName>
        <label>CommunityEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ET_ConsultantName__c</fullName>
        <label>ConsultantName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_InspectionDate__c</fullName>
        <label>InspectionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ET_MaintenancePhone__c</fullName>
        <label>MaintenancePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ET_MoveInDate__c</fullName>
        <label>MoveInDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ET_NameID__c</fullName>
        <externalId>true</externalId>
        <label>NameID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_OfficePhone__c</fullName>
        <label>OfficePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ET_RecordType__c</fullName>
        <label>RecordType</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ET_ResidentEmail__c</fullName>
        <label>ResidentEmail</label>
        <type>Email</type>
    </fields>
    <label>ExactTarget Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>ET_RecordType__c</columns>
        <columns>Contact__c</columns>
        <columns>ET_CommunityEmail__c</columns>
        <columns>ET_ConsultantName__c</columns>
        <columns>ET_InspectionDate__c</columns>
        <columns>ET_MoveInDate__c</columns>
        <columns>ET_MaintenancePhone__c</columns>
        <columns>ET_OfficePhone__c</columns>
        <columns>ET_NameID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All MIMO and Prospect records</label>
    </listViews>
    <listViews>
        <fullName>AppointmentNoShows</fullName>
        <columns>OBJECT_ID</columns>
        <columns>ET_RecordType__c</columns>
        <columns>Contact__c</columns>
        <columns>ET_CommunityEmail__c</columns>
        <columns>ET_ConsultantName__c</columns>
        <columns>ET_InspectionDate__c</columns>
        <columns>ET_MoveInDate__c</columns>
        <columns>ET_MaintenancePhone__c</columns>
        <columns>ET_OfficePhone__c</columns>
        <columns>ET_NameID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>ApptNoShow</value>
        </filters>
        <label>P1 Appointment No Shows</label>
    </listViews>
    <listViews>
        <fullName>ContactedOnlys</fullName>
        <columns>OBJECT_ID</columns>
        <columns>ET_RecordType__c</columns>
        <columns>Contact__c</columns>
        <columns>ET_CommunityEmail__c</columns>
        <columns>ET_ConsultantName__c</columns>
        <columns>ET_InspectionDate__c</columns>
        <columns>ET_MoveInDate__c</columns>
        <columns>ET_MaintenancePhone__c</columns>
        <columns>ET_OfficePhone__c</columns>
        <columns>ET_NameID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>ContactedOnly</value>
        </filters>
        <label>P2 Contacted Onlys</label>
    </listViews>
    <listViews>
        <fullName>MIMO</fullName>
        <booleanFilter>1 or 2 or 3 or 4</booleanFilter>
        <columns>OBJECT_ID</columns>
        <columns>ET_RecordType__c</columns>
        <columns>Contact__c</columns>
        <columns>ET_ResidentEmail__c</columns>
        <columns>ET_CommunityEmail__c</columns>
        <columns>ET_ConsultantName__c</columns>
        <columns>ET_InspectionDate__c</columns>
        <columns>ET_MoveInDate__c</columns>
        <columns>ET_MaintenancePhone__c</columns>
        <columns>ET_OfficePhone__c</columns>
        <columns>ET_NameID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>MoveInConfirmation</value>
        </filters>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>PostInspection</value>
        </filters>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>PreInspection</value>
        </filters>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>RecurringPayment</value>
        </filters>
        <label>M0 All MIMO Records</label>
    </listViews>
    <listViews>
        <fullName>MoveInConfirmations</fullName>
        <columns>OBJECT_ID</columns>
        <columns>ET_RecordType__c</columns>
        <columns>Contact__c</columns>
        <columns>ET_CommunityEmail__c</columns>
        <columns>ET_ConsultantName__c</columns>
        <columns>ET_InspectionDate__c</columns>
        <columns>ET_MoveInDate__c</columns>
        <columns>ET_MaintenancePhone__c</columns>
        <columns>ET_OfficePhone__c</columns>
        <columns>ET_NameID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>MoveInConfirmation</value>
        </filters>
        <label>M1 Move In Confirmations</label>
    </listViews>
    <listViews>
        <fullName>PostInspections</fullName>
        <columns>OBJECT_ID</columns>
        <columns>ET_RecordType__c</columns>
        <columns>Contact__c</columns>
        <columns>ET_CommunityEmail__c</columns>
        <columns>ET_ConsultantName__c</columns>
        <columns>ET_InspectionDate__c</columns>
        <columns>ET_MoveInDate__c</columns>
        <columns>ET_MaintenancePhone__c</columns>
        <columns>ET_OfficePhone__c</columns>
        <columns>ET_NameID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>PostInspection</value>
        </filters>
        <label>M2 Post Inspections</label>
    </listViews>
    <listViews>
        <fullName>PreliminaryInspections</fullName>
        <columns>OBJECT_ID</columns>
        <columns>ET_RecordType__c</columns>
        <columns>Contact__c</columns>
        <columns>ET_CommunityEmail__c</columns>
        <columns>ET_ConsultantName__c</columns>
        <columns>ET_InspectionDate__c</columns>
        <columns>ET_MoveInDate__c</columns>
        <columns>ET_MaintenancePhone__c</columns>
        <columns>ET_OfficePhone__c</columns>
        <columns>ET_NameID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>PreInspection</value>
        </filters>
        <label>M3 Preliminary Inspections</label>
    </listViews>
    <listViews>
        <fullName>Prospect</fullName>
        <booleanFilter>1 or 2 or 3 or 4 or 5 or 6</booleanFilter>
        <columns>OBJECT_ID</columns>
        <columns>ET_RecordType__c</columns>
        <columns>Contact__c</columns>
        <columns>ET_CommunityEmail__c</columns>
        <columns>ET_ConsultantName__c</columns>
        <columns>ET_InspectionDate__c</columns>
        <columns>ET_MoveInDate__c</columns>
        <columns>ET_MaintenancePhone__c</columns>
        <columns>ET_OfficePhone__c</columns>
        <columns>ET_NameID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>ContactedOnly</value>
        </filters>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>ApptNoShow</value>
        </filters>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>TouredOnly07</value>
        </filters>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>TouredOnly14</value>
        </filters>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>TouredOnly30</value>
        </filters>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>TouredOnly60</value>
        </filters>
        <label>P0 All Prospect Records</label>
    </listViews>
    <listViews>
        <fullName>RecurringPayments</fullName>
        <columns>OBJECT_ID</columns>
        <columns>ET_RecordType__c</columns>
        <columns>Contact__c</columns>
        <columns>ET_CommunityEmail__c</columns>
        <columns>ET_ConsultantName__c</columns>
        <columns>ET_InspectionDate__c</columns>
        <columns>ET_MoveInDate__c</columns>
        <columns>ET_MaintenancePhone__c</columns>
        <columns>ET_OfficePhone__c</columns>
        <columns>ET_NameID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>RecurringPayment</value>
        </filters>
        <label>M4 Recurring Payments</label>
    </listViews>
    <listViews>
        <fullName>TouredOnlys</fullName>
        <booleanFilter>1 or 2 or 3 or 4</booleanFilter>
        <columns>OBJECT_ID</columns>
        <columns>ET_RecordType__c</columns>
        <columns>Contact__c</columns>
        <columns>ET_CommunityEmail__c</columns>
        <columns>ET_ConsultantName__c</columns>
        <columns>ET_InspectionDate__c</columns>
        <columns>ET_MoveInDate__c</columns>
        <columns>ET_MaintenancePhone__c</columns>
        <columns>ET_OfficePhone__c</columns>
        <columns>ET_NameID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>TouredOnly07</value>
        </filters>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>TouredOnly14</value>
        </filters>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>TouredOnly30</value>
        </filters>
        <filters>
            <field>ET_RecordType__c</field>
            <operation>equals</operation>
            <value>TouredOnly60</value>
        </filters>
        <label>P3 Toured Onlys</label>
    </listViews>
    <nameField>
        <label>ExactTarget_MIMO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExactTarget Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>